Add independent runtime and thin api
